# field-apps-integration-and-automation

./: README.md
Python notebooks/: .gitignore  Contractor Registration Flow.ipynb  Contractor Registration.ipynb  README.md  Task Archiving and Worker Offboarding.ipynb  Tasks Clean Up.ipynb  pyproject.toml
