[project]
name = "arcgis-automation"
version = "0.1.0"
description = "Task archiving and worker offboarding automation for ArcGIS Online"
requires-python = ">=3.10"

dependencies = [
    "arcgis>=2.3.0",       # ArcGIS API for Python — provides GIS, FeatureLayer, Feature
    "pandas>=2.0.0",       # Data manipulation — used for tabular results
    "notebook>=7.0.0",     # Runs Jupyter notebooks locally
    "ipykernel>=6.0.0",    # Connects your Python environment to Jupyter
]